syntax = "proto3";

option java_package = "org.stypox.dicio.skills.chatgpt";
option java_multiple_files = true;

message SkillSettingsChatgpt {
  string api_key = 1;
  string system_prompt = 2;
  string model = 3;
}